--- a/GFHelper/GFHelper.csproj
+++ b/GFHelper/GFHelper.csproj
@@ -117,6 +117,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Window\DownLoadP.xaml.cs">
+      <DependentUpon>DownLoadP.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Programe\AuthCode.cs" />
     <Compile Include="BackgroundThread.cs" />
     <Compile Include="CatchData\Auto_Mission_Info.cs" />
@@ -134,10 +137,12 @@
     <Compile Include="Programe\ConfigManager.cs" />
     <Compile Include="Programe\POST.cs" />
     <Compile Include="Programe\ProgrameData.cs" />
+    <Compile Include="Programe\ProgramePro\ResultPro.cs" />
     <Compile Include="Programe\ProgramePro\WriteLog.cs" />
     <Compile Include="Programe\RequestUrls.cs" />
     <Compile Include="Programe\TaskList.cs" />
     <Compile Include="Programe\UIHelp.cs" />
+    <Compile Include="UserData\Dorm_With_User_Info.cs" />
     <Compile Include="UserData\MailList.cs" />
     <Compile Include="UserData\User_Record.cs" />
     <Compile Include="Ratio.cs" />
@@ -150,6 +155,10 @@
     <Compile Include="UserData\Operation_Act_Info.cs" />
     <Compile Include="UserData\UserDataSummery.cs" />
     <Compile Include="UserData\User_Info.cs" />
+    <Page Include="Window\DownLoadP.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
