--- a/GFHelper/GFHelper.csproj
+++ b/GFHelper/GFHelper.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>GFHelper</RootNamespace>
     <AssemblyName>少女前线-暗</AssemblyName>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
@@ -108,6 +108,9 @@
     <Reference Include="System.Xaml">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
     </Reference>
+    <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\UnityEngine.1.0.0\lib\UnityEngine.dll</HintPath>
+    </Reference>
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
@@ -117,10 +120,20 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="CatchData\CatchDataFunc\Game_Config_Info_Func.cs" />
+    <Compile Include="CatchData\Fairy.cs" />
+    <Compile Include="CatchData\fairy_info.cs" />
+    <Compile Include="CatchData\Fairy_Type_Info.cs" />
+    <Compile Include="CatchData\Game_Config_Info.cs" />
+    <Compile Include="Programe\Auto\BattleLoop.cs" />
+    <Compile Include="Programe\Auto\BattleMapInfo.cs" />
+    <Compile Include="Programe\Auto\UserBattleTaskInfo.cs" />
+    <Compile Include="Programe\ProgramePro\APK\EffectGridType.cs" />
+    <Compile Include="Programe\ProgramePro\APK\GunInfo.cs" />
+    <Compile Include="Programe\ProgramePro\APK\GunType.cs" />
+    <Compile Include="Programe\ProgramePro\APK\SubGunType.cs" />
     <Compile Include="Programe\TextRes\asset_textes.cs" />
-    <Compile Include="Window\DownLoadP.xaml.cs">
-      <DependentUpon>DownLoadP.xaml</DependentUpon>
-    </Compile>
+    <Compile Include="UserData\Func\Gun_With_User_Info_Func.cs" />
     <Compile Include="Programe\AuthCode.cs" />
     <Compile Include="BackgroundThread.cs" />
     <Compile Include="CatchData\Auto_Mission_Info.cs" />
@@ -143,6 +156,7 @@
     <Compile Include="Programe\TaskList.cs" />
     <Compile Include="Programe\UIHelp.cs" />
     <Compile Include="UserData\Dorm_With_User_Info.cs" />
+    <Compile Include="UserData\Gun.cs" />
     <Compile Include="UserData\MailList.cs" />
     <Compile Include="UserData\User_Record.cs" />
     <Compile Include="Ratio.cs" />
@@ -155,10 +169,6 @@
     <Compile Include="UserData\Operation_Act_Info.cs" />
     <Compile Include="UserData\UserDataSummery.cs" />
     <Compile Include="UserData\User_Info.cs" />
-    <Page Include="Window\DownLoadP.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -191,6 +201,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -226,7 +237,9 @@
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </COMReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Window\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
