--- a/GFHelper/packages.config
+++ b/GFHelper/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="SharpZipLib" version="0.86.0" targetFramework="net45" />
   <package id="UnityEngine" version="1.0.0" targetFramework="net46" />
 </packages>
