--- a/GFHelper/GFHelper.csproj
+++ b/GFHelper/GFHelper.csproj
@@ -94,7 +94,8 @@
       <HintPath>Resources\AuthCode.dll</HintPath>
     </Reference>
     <Reference Include="ICSharpCode.SharpZipLib, Version=0.86.0.518, Culture=neutral, PublicKeyToken=1b03e6acf1164f73, processorArchitecture=MSIL">
-      <HintPath>..\packages\SharpZipLib.0.86.0\lib\20\ICSharpCode.SharpZipLib.dll</HintPath>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>Resources\ICSharpCode.SharpZipLib.dll</HintPath>
     </Reference>
     <Reference Include="LitJson">
       <HintPath>Resources\LitJson.dll</HintPath>
@@ -139,6 +140,7 @@
     <Compile Include="Programe\Auto\Map_Sent.cs" />
     <Compile Include="Programe\Auto\UserBattleTaskInfo.cs" />
     <Compile Include="Programe\GameData.cs" />
+    <Compile Include="Programe\Gun_IN_OUT.cs" />
     <Compile Include="Programe\ProgramePro\APK\BattleSkillCfg.cs" />
     <Compile Include="Programe\ProgramePro\APK\EffectGridType.cs" />
     <Compile Include="Programe\ProgramePro\APK\enumSkill.cs" />
@@ -147,6 +149,7 @@
     <Compile Include="Programe\ProgramePro\APK\Skill.cs" />
     <Compile Include="Programe\ProgramePro\APK\SubGunType.cs" />
     <Compile Include="Programe\TextRes\asset_textes.cs" />
+    <Compile Include="UserData\Auto_Mission_Act_Info.cs" />
     <Compile Include="UserData\Func\Gun_With_User_Info_Func.cs" />
     <Compile Include="BackgroundThread.cs" />
     <Compile Include="CatchData\Auto_Mission_Info.cs" />
@@ -171,6 +174,7 @@
     <Compile Include="UserData\Dorm_With_User_Info.cs" />
     <Compile Include="UserData\Gun.cs" />
     <Compile Include="UserData\MailList.cs" />
+    <Compile Include="UserData\upgrade_act_info.cs" />
     <Compile Include="UserData\User_Record.cs" />
     <Compile Include="Ratio.cs" />
     <Compile Include="CatchData\OperationInfo.cs" />
