--- a/GFHelper/GFHelper.csproj
+++ b/GFHelper/GFHelper.csproj
@@ -134,6 +134,8 @@
     <Compile Include="CatchData\Game_Config_Info.cs" />
     <Compile Include="CatchData\Skill.cs" />
     <Compile Include="Programe\Auto\BattleLoop.cs" />
+    <Compile Include="Programe\Auto\BattleLoop_Activity.cs" />
+    <Compile Include="Programe\Auto\BattleLoop_Normal.cs" />
     <Compile Include="Programe\Auto\BattleMapInfo.cs" />
     <Compile Include="Programe\Auto\Battle_Sent.cs" />
     <Compile Include="Programe\Auto\Friend.cs" />
