--- a/GFHelper/GFHelper.csproj
+++ b/GFHelper/GFHelper.csproj
@@ -247,18 +247,18 @@
     <Resource Include="icon.ico" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Window\" />
+  </ItemGroup>
+  <ItemGroup>
     <COMReference Include="EyLogin">
       <Guid>{F8560BB6-C0D0-415B-B950-99F35E2F5385}</Guid>
       <VersionMajor>1</VersionMajor>
       <VersionMinor>0</VersionMinor>
       <Lcid>0</Lcid>
       <WrapperTool>tlbimp</WrapperTool>
-      <Isolated>True</Isolated>
+      <Isolated>False</Isolated>
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </COMReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Window\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
