--- a/GFHelper/GFHelper.csproj
+++ b/GFHelper/GFHelper.csproj
@@ -135,6 +135,7 @@
     <Compile Include="CatchData\fairy_info.cs" />
     <Compile Include="CatchData\Fairy_Type_Info.cs" />
     <Compile Include="CatchData\Game_Config_Info.cs" />
+    <Compile Include="CatchData\Gun_Exp_Info.cs" />
     <Compile Include="CatchData\Skill.cs" />
     <Compile Include="Programe\Auto\BattleLoop.cs" />
     <Compile Include="Programe\Auto\BattleLoop_Activity.cs" />
